--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'br.com.simplepass:loading-button-android:2.2.0'
 
+    def room_version = "2.4.1"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
