--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,18 +47,21 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'br.com.simplepass:loading-button-android:2.2.0'
-    implementation 'de.hdodenhof:circleimageview:3.0.0'
+
     def room_version = "2.4.1"
-    implementation 'com.github.f0ris.sweetalert:library:1.5.6'
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.android.volley:volley:1.2.1'
 
     implementation 'com.google.firebase:firebase-inappmessaging-display:17.2.0'
     implementation 'com.google.guava:guava:27.0.1-android'
+
+    implementation 'me.dm7.barcodescanner:zxing:1.9.13'
+
 }
