--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.falcons.buildingstore">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,6 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BuildingStore">
+        <activity
+            android:name=".Activities.AddNewCustomer"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.AddNewUser"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.OrderReport"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.ShowPreviousOrder"
+            android:windowSoftInputMode="adjustPan|adjustResize"
+            android:exported="false" />
         <activity
             android:name=".Activities.BasketActivity"
             android:exported="false" />
@@ -35,11 +44,11 @@
         -->
         <activity
             android:name=".Activities.HomeActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".Activities.LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -48,5 +57,9 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
