--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,19 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
+        resources {
+            excludes += ['META-INF/DEPENDENCIES']
+        }
     }
+
+    dataBinding {
+
+        enabled = true
+
+    }
+
+
 }
 
 dependencies {
@@ -62,6 +70,7 @@ dependencies {
 
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
 
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 
 
 
