--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <application
         android:allowBackup="true"
 
-        android:icon="@drawable/logo"
+        android:icon="@mipmap/ic_logo"
         android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
         android:label="@string/app_name"
@@ -20,10 +20,12 @@
             android:exported="false" />
         <activity
             android:name=".Activities.AddNewCustomer"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".Activities.AddNewUser"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".Activities.OrderReport"
             android:exported="false" />
@@ -33,7 +35,8 @@
             android:windowSoftInputMode="adjustPan|adjustResize" />
         <activity
             android:name=".Activities.BasketActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".Activities.SplashActivity"
             android:exported="true">
@@ -54,7 +57,7 @@
         <activity
             android:name=".Activities.HomeActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".Activities.LoginActivity"
             android:exported="true" />
