--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.falcons.buildingstore">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
 
         android:icon="@drawable/logo"
         android:largeHeap="true"
