--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,9 +77,9 @@ dependencies {
     //    implementation files('libs/opencsv-5.3.jar')
 //    implementation files('libs/jxl-2.6.12.jar')
 
-   implementation 'com.itextpdf:itext7-core:7.1.11'
+ //  implementation 'com.itextpdf:itext7-core:7.1.11'
 
-  // implementation 'com.itextpdf:itextg:5.5.10'
+ implementation 'com.itextpdf:itextg:5.5.10'
 
 
 }
